# crypto-token-app

./: package-lock.json
backend/: Cargo.toml  crypto-data.json  storage.rs
backend/src/: main.rs
backend/src/handlers/: balance.rs  mint.rs  mod.rs  transfer.rs
backend/src/models/: mod.rs  token.rs  transaction.rs  wallet.rs
backend/src/storage/: memory_store.rs  mod.rs
crypto-backend/: Cargo.toml
frontend/: login.html  package-lock.json  package.json  postcss.config.js  signup.html  tailwind.config.js
frontend/css/: auth.css
frontend/js/: auth.js
frontend/public/: index.html
frontend/public/pages/: Login.jsx  Signup.jsx
frontend/src/: App.jsx  index.css  index.js
frontend/src/components/: MintTokenForm.jsx  TransactionHistory.jsx  TransferForm.jsx  WalletView.jsx
frontend/src/hooks/: useTokens.js
frontend/src/pages/: Dashboard.jsx  Login.jsx  Signup.jsx
frontend/src/services/: api.js
public/css/: login.css
