[package]
name = "crypto-token-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and CORS support
actix-web = "4.4"
actix-cors = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation with serde support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.10"
log = "0.4"